# fakesid2

./: CMakeLists.txt  README.md
src/: gplayer.cpp  gplayer.hpp  gsong.cpp  gsong.hpp  main.cpp
